--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
     },
     "require": {
         "php": ">=5.4",
-        "erliz/silex-common-bundle": "dev-master"
+        "erliz/silex-common-bundle": "dev-master",
+        "guzzlehttp/guzzle": "~4.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.7"
+        "phpunit/phpunit": "~4.7",
+        "namshi/cuzzle": "0.1.1"
     }
 }
