--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": ">=5.4",
         "erliz/silex-common-bundle": "dev-master",
-        "guzzlehttp/guzzle": "~4.2"
+        "guzzlehttp/guzzle": "~4.2",
+        "gedmo/doctrine-extensions": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7",
