--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=5.4",
         "erliz/silex-common-bundle": "dev-master",
         "guzzlehttp/guzzle": "~5.0",
-        "gedmo/doctrine-extensions": "~2.3"
+        "gedmo/doctrine-extensions": "~2.3",
+        "kuikui/memcache-service-provider": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7"
